# nveil-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-mcp-registry.yml
examples/: 01_basic_chart.py  02_scatter_with_session.py  03_save_and_reload.py  04_multi_dataset.py
src/nveil/: .mcp.json  __init__.py  client.py  exceptions.py  session.py  spec.py  timing.py
src/nveil/.claude-plugin/: plugin.json
src/nveil/cli/: __init__.py  config.py  main.py  skill_source.py
src/nveil/cli/commands/: __init__.py  describe.py  docs.py  explain.py  generate.py  install_mcp.py  install_skill.py  mcp_server.py  render.py
src/nveil/skills/nveil/: SKILL.md
